# Tick

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  biicode.conf  mkdocs.yml  tick.pc.in
doc/: Makefile  conf.py  genreadme  index.rst  make.bat  requirements.txt
doc/html/: 404.html  index.html  sitemap.xml
doc/html/acknowledgments/: index.html
doc/html/builder/: index.html
doc/html/check/: index.html
doc/html/design/: index.html
doc/html/license/: index.html
doc/html/mkdocs/: search_index.json
doc/html/requirements/: index.html
doc/html/requires/: index.html
doc/html/tag/: index.html
doc/html/zlang/: index.html
doc/src/: acknowledgments.md  builder.md  check.md  design.md  index.md  requirements.md  requires.md  tag.md  traits.rst  zlang.md
test/: builder.cpp  fold.cpp  integral_constant.cpp  matches.cpp  requires.cpp  set.cpp  tag.cpp  test.h  trait_check.cpp  traits.cpp
tick/: builder.h  concept.h  integral_constant.h  iterator_concept.h  placeholders.h  requires.h  tag.h  trait_check.h  traits.h
tick/detail/: fold.h  matches.h  pp.h  set.h  using.h
tick/traits/: bare.h  is_allocator.h  is_associative_container.h  is_bidirectional_iterator.h  is_compare.h  is_container.h  is_copy_assignable.h  is_copy_constructible.h  is_copy_insertable.h  is_default_constructible.h  is_destructible.h  is_emplace_constructible.h  is_equality_comparable.h  is_erasable.h  is_forward_iterator.h  is_input_iterator.h  is_iterator.h  is_less_than_comparable.h  is_move_assignable.h  is_move_constructible.h  is_move_insertable.h  is_mutable_bidirectional_iterator.h  is_mutable_forward_iterator.h  is_mutable_random_access_iterator.h  is_nullable_pointer.h  is_output_iterator.h  is_pod.h  is_predicate.h  is_random_access_iterator.h  is_range.h  is_reversible_container.h  is_sequence_container.h  is_standard_layout.h  is_swappable.h  is_totally_ordered.h  is_trivial.h  is_trivially_copyable.h  is_value_swappable.h  is_weakly_ordered.h
